[project]
name = "mongocachestats"
version = "0.1.0"
description = "MongoDB WiredTiger cache statistics monitoring tool with CLI and Streamlit interfaces"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2025.1.31",
    "plotly>=5.24.1",
    "pymongo>=4.11.3",
    "streamlit>=1.41.1",
    "tabulate>=0.9.0",
]
